nes-systests/systest/tests/testdata/errors/MultipleCorrectAndIncorrect.dummy
CREATE LOGICAL SOURCE stream(id UINT64, value UINT64);
CREATE PHYSICAL SOURCE FOR stream TYPE File;
ATTACH INLINE
1,2

CREATE SINK ID_VALUE_SINK(stream.id UINT64, stream.value UINT64)  TYPE File;
CREATE SINK ID_SINK(stream.id UINT64)  TYPE File;
CREATE SINK VALUE_SINK(stream.value UINT64)  TYPE File;

# Correct
SELECT id, value FROM stream INTO ID_VALUE_SINK;
----
1 2

# Incorrect
SELECT id, value FROM stream INTO ID_VALUE_SINK;
----

# Incorrect
SELECT id, value FROM stream INTO ID_VALUE_SINK;
----
2 1

# Incorrect
SELECT id FROM stream INTO ID_VALUE_SINK;
----
1

# Correct
SELECT id FROM stream INTO ID_SINK;
----
1

# Correct
SELECT value FROM stream INTO VALUE_SINK;
----
2

# Incorrect
SELECT value FROM stream INTO ID_VALUE_SINK;
----
1 2

# Correct
SELECT id, value FROM stream WHERE id > UINT64(3) INTO ID_VALUE_SINK;
----

